<resources>
    <string name="app_name">A Maze By Duke Tran</string>
    <string name="greeting">Behold the Labyrinth!</string>
    <string name="builderText">Builder</string>
    <string name="driverText">Driver</string>
    <string name="exploreText">Explore</string>
    <string name="revisitText">Revisit</string>
    <string name="rooms_text">Maze Rooms</string>
    <string name="loading_text">Erecting the Walls…</string>
    <string name="mode_text">Customize Your Hero</string>
    <string name="robotText">Robot</string>
    <string name="play_text">Begin Quest</string>
    <string name="pathLengthText">Path Length: %1$d</string>
    <string name="showMapText">Show Map</string>
    <string name="showSolutionText">Show Solution</string>
    <string name="showAllWallsText">Show All Walls</string>
    <string name="menuText">||</string>
    <string name="shortcutText">Shortcut</string>
    <string name="go2WinningText">Go2Winning</string>
    <string name="go2LosingText">Go2Losing</string>
    <string name="sensorsText">Sensors</string>
    <string name="animationSpeedText">Animation Speed</string>
    <string name="startAnimationText">Start Animation</string>
    <string name="stopAnimationText">Stop Animation</string>
    <string name="energyConsumptionText">Energy consumption</string>
    <string name="menuButtonDescription">Menu button</string>
    <string name="zoomOutButtonDescription">Zoom out button</string>
    <string name="zoomInButtonDescription">Zoom in button</string>
    <string name="forwardButtonDescription">Forward button</string>
    <string name="rightButtonDescription">Right button</string>
    <string name="backwardButtonDescription">Backward button</string>
    <string name="leftButtonDescription">Left button</string>
    <string name="jumpButtonDescription">Jump button</string>
    <string name="minotaurIconDescription">Minotaur icon</string>
    <string name="winningText">Quest Complete!</string>
    <string name="totalEnergyConsumptionText">Energy Consumption: %1$s</string>
    <string name="newQuestText">Start New Quest</string>
    <string name="losingText">Quest Failed!</string>
    <string name="skillLevelText">Difficulty (Skill Level)</string>
    <string name="shortestPathText">Shortest Path: %1$d</string>
    <string name="slowText">Slow</string>
    <string name="fastText">Fast</string>
    <string-array name="builder">
        <item>Random</item>
        <item>Prim</item>
        <item>Eller</item>
    </string-array>
    <string-array name="driver">
        <item>Manual</item>
        <item>Wizard</item>
        <item>Wallfollower</item>
    </string-array>
    <string-array name="robot">
        <item>Demigod (Reliable)</item>
        <item>Warrior</item>
        <item>Captain</item>
        <item>Soldier (Unreliable)</item>
    </string-array>
</resources>