<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popupMenu"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <item
        android:id="@+id/showMapItem"
        android:title="@string/showMapText"
        android:checkable="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/showSolutionItem"
        android:title="@string/showSolutionText"
        android:checkable="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/showAllWallsItem"
        android:title="@string/showAllWallsText"
        android:checkable="true"
        app:showAsAction="always" />
</menu>
