<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dungeon_hallway"
    tools:context=".gui.PlayManuallyActivity">

    <TextView
        android:id="@+id/pathLengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/pathLengthText"
        android:textSize="28sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/menuButton"
        android:contentDescription="@string/menuButtonDescription"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="10dp"
        android:paddingVertical="5dp"
        android:src="@mipmap/pause"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/zoomOutButton"
            android:contentDescription="@string/zoomOutButtonDescription"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimaryTranslucent"
            android:src= "@mipmap/minus"/>

        <ImageView
            android:id="@+id/zoomInButton"
            android:contentDescription="@string/zoomInButtonDescription"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/colorPrimaryTranslucent"
            android:src="@mipmap/plus" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shortcutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:text="@string/shortcutText"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pathLengthText" />

    <ImageView
        android:id="@+id/forwardButton"
        android:contentDescription="@string/forwardButtonDescription"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="135dp"
        android:layout_marginEnd="70dp"
        android:paddingHorizontal="10dp"
        android:background="@color/colorPrimaryTranslucent"
        android:src="@mipmap/arrow"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/rightButton"
        android:contentDescription="@string/rightButtonDescription"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="15dp"
        android:paddingHorizontal="10dp"
        android:background="@color/colorPrimaryTranslucent"
        android:src="@mipmap/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/backwardButton"
        android:contentDescription="@string/backwardButtonDescription"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="70dp"
        android:paddingHorizontal="10dp"
        android:background="@color/colorPrimaryTranslucent"
        android:src="@mipmap/arrow"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/leftButton"
        android:contentDescription="@string/leftButtonDescription"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="125dp"
        android:paddingHorizontal="10dp"
        android:background="@color/colorPrimaryTranslucent"
        android:src="@mipmap/arrow"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id ="@+id/jumpButton"
        android:contentDescription="@string/jumpButtonDescription"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:src="@mipmap/up_arrows"
        android:background="@drawable/jump_button"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>