<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dungeon_entrance_animated"
    tools:context=".gui.GeneratingActivity">

    <TextView
        android:id="@+id/generatingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading_text"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />
    
    <View
        android:id="@+id/minotaurProgress"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/minotaur_progress"
        app:layout_constraintTop_toBottomOf="@id/generatingText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/modeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/minotaurProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_text"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/driverLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/progressBar">

            <TextView
                android:id="@+id/driverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driverText"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/driverSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/robotLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/progressBar">

            <TextView
                android:id="@+id/robotText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robotText"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/robotSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/play_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/modeLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>